--- a/regru.html
+++ b/regru.html
@@ -14,44 +14,44 @@
 
 <body>
     <main>
-    <section>
-        <div class="container">
-            <div class="intro">
-                <h1>Филипьева Валерия Романовна</h1>
-                <p>Студентка первого курса Московского Политеха</p>
+        <section>
+            <div class="container">
+                <div class="intro">
+                    <h1>Филипьева Валерия Романовна</h1>
+                    <p>Студентка первого курса Московского Политеха</p>
+                </div>
             </div>
-        </div>
-    </section>
-    <section>
-        <div class="contacts">
-       <h2>Контакты:</h2>
-        <p>
-        Номер телефона: + 7 919 775 18 25
-        Никнейм в Вконтакте : @leronavaleron 
-        </p>
-        </div>
-    </section>
-    <section>
-        <div class="education">
-        <h2>Высшее образование:</h2>
-            <p>
-            неоконченное ;
-            Дополнительное образование :Роспись по шёлку.
-        </p>
-        </div>
-    </section>
-    <section>
-        <div class="principles">
-        <h2>Жизненные принципы</h2>
-        <ul>
-            <li>Хочешь жить - умей вертеться</li>
-            <li>Главное знать чего хочешь</li>
-            <li>Живем один раз</li>
-            <li>Жить нужно здесь и сейчас, а не в прошлом</li>
-        </ul>
-    </div>
-    </section>
-   </main>
+        </section>
+        <section>
+            <div class="contacts">
+                <h2>Контакты:</h2>
+                <p>
+                    Номер телефона: + 7 (919) 775-18-25
+                    Никнейм в Вконтакте : @leronavaleron
+                </p>
+            </div>
+        </section>
+        <section>
+            <div class="education">
+                <h2>Высшее образование:</h2>
+                <p>
+                    неоконченное ;
+                    Дополнительное образование : Роспись по шёлку.
+                </p>
+            </div>
+        </section>
+        <section>
+            <div class="principles">
+                <h2>Жизненные принципы</h2>
+                <ul>
+                    <li>Хочешь жить - умей вертеться</li>
+                    <li>Главное знать чего хочешь</li>
+                    <li>Живем один раз</li>
+                    <li>Жить нужно здесь и сейчас, а не в прошлом</li>
+                </ul>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
