--- a/index .html
+++ b/index .html
@@ -208,7 +208,7 @@
       <section>
         <div class="intro">
           <h1>
-            <span1>Внутренняя аналитика</span1> и <span2>финансовый учёт</span2>
+            <span class="span1">Внутренняя аналитика</span> и <span class="span2">финансовый учёт</span>
             для бизнеса на маркетплейсах
           </h1>
           <!-- <img src="./static/images/marketplaces-logos-m 1.png" alt="logo ozon and logo wb" class="ozonwb"> -->
