--- a/form.html
+++ b/form.html
@@ -10,6 +10,7 @@
   <link rel="preload" href="fonts/nt-somic-bold.woff2" as="font">
   <link rel="preload" href="css/style.css" as="style">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/form.css">
 </head>
 
 <body class="page__body">
