--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="header">
     <div class="header__container">
       <div class="header__logo logo"><a class="logo__link" href="./index.html"><img class="logo__image"
-            src="./img/logo.svg" width="187" height="18" alt="Логотип Mpasisstant."></a>
+            src="./img/logo.svg" width="187" height="18" alt="Логотип Mpasisstant."><span class ="sr-only">Ссылка</span></a>
         <p class="logo__text">Аналитика и оцифровка продаж<br><span
             class="logo__market logo__market--wb">Wildberries</span> и <span
             class="logo__market logo__market--ozon">Ozon</span></p>
