--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mpasisstant</title>
   <link rel="preload" href="fonts/nt-somic-regular.woff2" as="font">
   <link rel="preload" href="fonts/nt-somic-medium.woff2" as="font">
@@ -13,46 +13,73 @@
 </head>
 
 <body class="page__body">
+  <a class="skip-link" href="#main">
+    Перейти к контенту
+  </a>
   <header class="header">
     <div class="header__container">
-      <div class="header__logo logo"><a class="logo__link" href="./index.html"><img class="logo__image"
-            src="./img/logo.svg" width="187" height="18" alt="Логотип Mpasisstant."></a>
-        <p class="logo__text">Аналитика и оцифровка продаж<br><span
-            class="logo__market logo__market--wb">Wildberries</span> и <span
-            class="logo__market logo__market--ozon">Ozon</span></p>
+      <div class="header__logo logo">
+        <a class="logo__link" href="./index.html">
+          <img class="logo__image" src="./img/logo.svg" width="187" height="18" alt="Логотип Mpasisstant.">
+          <span class="sr-only">На главную</span>
+        </a>
+        <p class="logo__text">
+          Аналитика и оцифровка продаж<br>
+          <span class="logo__market logo__market--wb">Wildberries</span>
+          и
+          <span class="logo__market logo__market--ozon">Ozon</span>
+        </p>
       </div>
       <nav class="header__site-navigation site-navigation">
         <ul class="site-navigation__list">
-          <li class="site-navigation__item"><a class="site-navigation__link" href="#">О нас</a></li>
-          <li class="site-navigation__item"><a class="site-navigation__link" href="#">Возможности</a></li>
-          <li class="site-navigation__item"><a class="site-navigation__link" href="#">Тарифы</a></li>
+          <li class="site-navigation__item">
+            <a class="site-navigation__link" href="#">О нас</a>
+          </li>
+          <li class="site-navigation__item">
+            <a class="site-navigation__link" href="#">Возможности</a>
+          </li>
+          <li class="site-navigation__item">
+            <a class="site-navigation__link" href="#">Тарифы</a>
+          </li>
         </ul>
       </nav>
       <nav class="header__user-navigation user-navigation">
         <ul class="user-navigation__list">
-          <li class="user-navigation__item"><a class="user-navigation__link user-navigation__link--sign-in"
-              href="#"><span>Вход</span></a></li>
-          <li class="user-navigation__item"><a class="user-navigation__link user-navigation__link--sign-up button"
-              href="#"><span>Зарегистрироваться</span></a></li>
+          <li class="user-navigation__item">
+            <a class="user-navigation__link user-navigation__link--sign-in" href="#">
+              <span>Вход</span>
+            </a>
+          </li>
+          <li class="user-navigation__item">
+            <a class="user-navigation__link user-navigation__link--sign-up button" href="#">
+              <span>Зарегистрироваться</span>
+            </a>
+          </li>
         </ul>
-      </nav><button class="header__toggle" type="button"><span>Открыть меню</span></button>
+      </nav>
+      <button class="header__toggle" type="button">
+        <span>Открыть меню</span>
+      </button>
     </div>
   </header>
-  <main class="main">
+  <main class="main" id="main">
     <div class="main__container">
       <div class="line-wrapper">
-        <div class="runningline"><img class="runningline-img" style="width: 150px; height: 150px"
-            src="img/others/Frame 631.jpg" alt=""> <img class="runningline-img delay1"
-            style="width: 150px; height: 150px" src="img/others/Rectangle 4.jpg" alt=""> <img
-            class="runningline-img delay2" style="width: 150px; height: 150px" src="img/others/customer-service.svg"
-            alt=""> <img class="runningline-img delay3" style="width: 150px; height: 150px"
-            src="img/others/experience.svg" alt=""></div>
+        <div class="runningline">
+          <img class="runningline-img" style="width: 150px; height: 150px" src="img/others/Frame 631.jpg" alt=""/>
+          <img class="runningline-img delay1" style="width: 150px; height: 150px" src="img/others/Rectangle 4.jpg" alt=""/>
+          <img class="runningline-img delay2" style="width: 150px; height: 150px" src="img/others/customer-service.svg" alt=""/>
+          <img class="runningline-img delay3" style="width: 150px; height: 150px" src="img/others/experience.svg" alt=""/>
+        </div>
       </div>
       <div class="flip-card">
         <div class="flip-card-inner">
-          <div class="flip-card-front"><img src="img/others/manual.svg" alt="Avatar"
-              style="width: 300px; height: 300px"></div>
-          <div class="flip-card-back"><img style="width: 300px; height: 300px" src="img/others/7.svg" alt=""></div>
+          <div class="flip-card-front">
+            <img src="img/others/manual.svg" alt="Avatar" style="width: 300px; height: 300px"/>
+          </div>
+          <div class="flip-card-back">
+            <img style="width: 300px; height: 300px" src="img/others/7.svg" alt=""/>
+          </div>
         </div>
       </div>
     </div>
@@ -60,67 +87,121 @@
   <footer class="footer">
     <div class="footer__container">
       <div class="footer__contacts">
-        <div class="footer__logo logo"><a class="logo__link" href="./index.html"><img class="logo__image"
-              src="./img/logo.svg" width="187" height="18" alt="Логотип Mpasisstant"></a>
-          <p class="logo__text">Аналитика и оцифровка продаж<br><span
-              class="logo__market logo__market--wb">Wildberries</span> и <span
-              class="logo__market logo__market--ozon">Ozon</span></p>
+        <div class="footer__logo logo">
+          <a class="logo__link" href="./index.html">
+            <img class="logo__image" src="./img/logo.svg" width="187" height="18" alt="Логотип Mpasisstant">
+            <span class="sr-only">На главную</span>
+          </a>
+          <p class="logo__text">
+            Аналитика и оцифровка продаж<br>
+            <span class="logo__market logo__market--wb">Wildberries</span>
+            и
+            <span class="logo__market logo__market--ozon">Ozon</span>
+          </p>
         </div>
         <ul class="footer__socials socials">
-          <li class="socials__item"><a class="socials__link socials__link--vkontakte" href="#"><span
-                class="visually-hidden">Vkontakte</span></a></li>
-          <li class="socials__item"><a class="socials__link socials__link--telegram" href="#"><span
-                class="visually-hidden">Telegram</span></a></li>
-          <li class="socials__item"><a class="socials__link socials__link--youtube" href="#"><span
-                class="visually-hidden">YouTube</span></a></li>
+          <li class="socials__item">
+            <a class="socials__link socials__link--vkontakte" href="#">
+              <span class="sr-only">Vkontakte</span>
+            </a>
+          </li>
+          <li class="socials__item">
+            <a class="socials__link socials__link--telegram" href="#">
+              <span class="sr-only">Telegram</span>
+            </a>
+          </li>
+          <li class="socials__item">
+            <a class="socials__link socials__link--youtube" href="#">
+              <span class="sr-only">YouTube</span>
+            </a>
+          </li>
         </ul>
       </div>
       <div class="footer__block-group">
         <div class="footer__item">
           <h3 class="footer__title">Сервис</h3>
           <ul class="footer__list">
-            <li><a href="#">Для кого</a></li>
-            <li><a href="#">Возможности</a></li>
-            <li><a href="#">Тарифы</a></li>
-            <li><a href="grid.html">Гриды</a></li>
-            <li><a href="form.html">Формы</a></li>
-            <li><a href="demo.html">Демо</a></li>
+            <li>
+              <a href="#">Для кого</a>
+            </li>
+            <li>
+              <a href="#">Возможности</a>
+            </li>
+            <li>
+              <a href="#">Тарифы</a>
+            </li>
+            <li>
+              <a href="grid.html">Гриды</a>
+            </li>
+            <li>
+              <a href="form.html">Формы</a>
+            </li>
+            <li>
+              <a href="demo.html">Демо</a>
+            </li>
           </ul>
         </div>
         <div class="footer__item">
           <h3 class="footer__title">Клиентам</h3>
           <ul class="footer__list">
-            <li><a href="#">Вход</a></li>
-            <li><a href="#">Регистрация</a></li>
-            <li><a href="#">Восстановления пароля</a></li>
+            <li>
+              <a href="#">Вход</a>
+            </li>
+            <li>
+              <a href="#">Регистрация</a>
+            </li>
+            <li>
+              <a href="#">Восстановления пароля</a>
+            </li>
           </ul>
         </div>
         <div class="footer__item">
           <h3 class="footer__title">Документы</h3>
           <ul class="footer__list">
-            <li><a href="#">Пользовательское соглашение</a></li>
-            <li><a href="#">Политика конфиденциальности</a></li>
-            <li><a href="#">Публичная оферта</a></li>
-            <li><a href="#">Использование cookie</a></li>
-            <li><a href="#">Техническая поддержка</a></li>
+            <li>
+              <a href="#">Пользовательское соглашение</a>
+            </li>
+            <li>
+              <a href="#">Политика конфиденциальности</a>
+            </li>
+            <li>
+              <a href="#">Публичная оферта</a>
+            </li>
+            <li>
+              <a href="#">Использование cookie</a>
+            </li>
+            <li>
+              <a href="#">Техническая поддержка</a>
+            </li>
           </ul>
         </div>
       </div>
       <ul class="footer__payment payment">
-        <li class="payment__item"><img class="pament__image" width="133" height="36" src="./img/modulbank.png"
-            alt="Логотип Модуль Банк."></li>
-        <li class="payment__item"><img class="pament__image" width="63" height="26" src="./img/visa.png"
-            alt="Логотип Виза."></li>
-        <li class="payment__item"><img class="pament__image" width="42" height="26" src="./img/mastercard.png"
-            alt="Логотип Мастер Кард."></li>
-        <li class="payment__item"><img class="pament__image" width="42" height="26" src="./img/maestro.png"
-            alt="Логотип Маэстро."></li>
-        <li class="payment__item"><img class="pament__image" width="68" height="18" src="./img/mir.png"
-            alt="Логотип Мир."></li>
+        <li class="payment__item">
+          <img class="pament__image" width="133" height="36" src="./img/modulbank.png" alt="Логотип Модуль Банк.">
+        </li>
+        <li class="payment__item">
+          <img class="pament__image" width="63" height="26" src="./img/visa.png" alt="Логотип Виза.">
+        </li>
+        <li class="payment__item">
+          <img class="pament__image" width="42" height="26" src="./img/mastercard.png" alt="Логотип Мастер Кард.">
+        </li>
+        <li class="payment__item">
+          <img class="pament__image" width="42" height="26" src="./img/maestro.png" alt="Логотип Маэстро.">
+        </li>
+        <li class="payment__item">
+          <img class="pament__image" width="68" height="18" src="./img/mir.png" alt="Логотип Мир.">
+        </li>
       </ul>
-      <p class="footer__copyright">&copy; 2022–2023 Mpassistant</p>
-      <p class="footer__disclaimer">Информация, размещённая на сайте, не является публичной офертой</p>
-      <p class="footer__design">Редизайн сайта <span>Turkuletsdesign</span></p>
+      <p class="footer__copyright">
+        &copy; 2022–2023 Mpassistant
+      </p>
+      <p class="footer__disclaimer">
+        Информация, размещённая на сайте, не является публичной офертой
+      </p>
+      <p class="footer__design">
+        Редизайн сайта <span>Turkuletsdesign</span>
+      </p>
     </div>
   </footer>
 </body>
